<resources>
    <string name="app_name">Free Games</string>
    <string name="games_image">Games image</string>
    <string name="title_text">Title Text</string>
    <string name="end_date">End Date</string>
    <string name="platform">Platform</string>
    <string name="platformtxt">Platform: %1$s</string>
    <string name="claim_now">CLAIM NOW!</string>
    <string name="instruction">Instruction</string>
    <string name="giveaway_end">Giveaway End: %1$s</string>
    <string name="thanks_to_gamerpower_for_provide_api">Thanks to gamerpower for provide API</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="share_game_text">%1$s\n\nPlatform: %3$s\n\nURL: %2$s</string>
    <string name="share_game_subject">Check out this awesome game!</string>
    <string name="giveaway_detail">Giveaway Detail</string>
    <string name="free_games_info">Free Games Info</string>
    <string name="games_title">Games Title</string>
</resources>